[project]
name = "codex-imagen2-api"
version = "0.1.0"
description = "Async Codex image generation demo with an OpenAI-compatible route."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.39.0",
]
